# kpis

./: .gitignore  CLAUDE.md  README.md  adjustments.csv  baseline_overrides.csv  environment.yml  instrument_status.csv  notes.md  original_expected.csv  pyproject.toml
.github/workflows/: refresh-baseline.yml  weekly-kpi.yml
config/: baseline_overrides.csv  exclusions.csv  instrument_overrides.csv
docs/: notes.md
handoff/: OOI KPIs PYVIII v3-1_RCA_completed.xlsx
rca_kpis/: archive_crawler.py  kpi.py  science.py  viz.py
reports/2026-06-25/: kpi.csv  kpi_pivot_retention.csv  kpi_pivot_technical.csv  weekly_delivery.csv  weekly_science.csv
reports/2026-06-26/: kpi.csv  kpi_pivot_science.csv  weekly_science.csv
reports/2026-06-29/: kpi.csv  kpi_notes.md  kpi_pivot_retention.csv  kpi_pivot_science.csv  kpi_pivot_technical.csv  weekly_delivery.csv  weekly_science.csv
